# aws

./: Cap.drawio  README.md  ReadMe.txt
docs/: architecture-pii.md  deploy-and-test.md  pii-api.md  prior-art.md  scope.md
infra/pii/: .gitignore  Makefile  README.md  alb.tf  ecr.tf  ecs.tf  iam.tf  main.tf  outputs.tf  scaling.tf  variables.tf  versions.tf  vpc.tf
services/pii/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
services/pii/app/: main.py  recognizers.py  redactor.py
services/pii/tests/: conftest.py  test_no_pii_in_logs.py  test_redactor.py
