[project]
name = "voice-pii"
version = "0.1.0"
description = "Stateless PII redaction service for the Voice project."
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.5",
  "uvicorn[standard]==0.32.1",
  "pydantic==2.9.2",
  "presidio-analyzer==2.2.355",
  "presidio-anonymizer==2.2.355",
  "spacy==3.7.5",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.3",
  "httpx==0.27.2",
  "ruff==0.7.4",
]

[tool.ruff]
line-length = 100
